# digital-twin

./: .mcp.json  requirements.md
audio_recorder/: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  TASKS.md  TRANSCRIPTION_PERFORMANCE.md  audio-recorder.desktop  build-appimage.sh  pyproject.toml  test.txt
audio_recorder/appimage-build/: audio-recorder.desktop  entrypoint.sh  requirements.txt
audio_recorder/audio_recorder/: __init__.py  __main__.py  config.py  exceptions.py
audio_recorder/audio_recorder/cli/: __init__.py  app.py
audio_recorder/audio_recorder/core/: __init__.py  mixer.py  protocols.py  session.py
audio_recorder/audio_recorder/processors/: __init__.py  speaker_diarizer.py  whisper_transcriber.py
audio_recorder/audio_recorder/sources/: __init__.py  enumerator.py  sounddevice_source.py
audio_recorder/audio_recorder/writers/: __init__.py  wav_writer.py
